# fletbot

./: .gitignore  README.md  THIRD_PARTY_NOTICES.md  issues.json  pyproject.toml  test_storage.py
scratch/: fix_imports.py
src/: main.py
src/ads/: __init__.py  manager.py
src/agent/: __init__.py  context.py  memory.py  runner.py  tools.py
src/auth/: __init__.py  token_manager.py
src/components/: __init__.py  camera_viewfinder.py  input_bar.py  markdown_renderer.py  media_preview.py  message_bubble.py  quick_actions.py  recording_indicator.py
src/providers/: __init__.py  base.py  gemma_provider.py
src/services/: __init__.py  audio.py  camera.py  file_picker.py  share.py
src/session/: __init__.py  manager.py
src/theme/: __init__.py  colors.py  styles.py  tokens.py
src/utils/: paths.py
src/views/: __init__.py  chat_view.py  history_view.py  login_view.py  settings_view.py
tests/: conftest.py  test_ads.py  test_agent.py  test_agent_tools.py  test_auth.py  test_components.py  test_context.py  test_memory.py  test_provider.py  test_provider_resilience.py  test_services_api.py  test_session.py  test_session_edge_cases.py  test_theme.py  test_views.py
