[project]
name = "fletbot"
version = "0.1.0"
description = "A consumer-ready implementation of OpenClaw, utilizing Flet for lightweight execution on edge hardware."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [
    {name = "Nwokike"}
]
keywords = ["ai", "assistant", "chatbot", "flet", "gemma"]

dependencies = [
    "flet>=0.84.0",
    "flet-ads>=0.84.0",
    "flet-secure-storage>=0.84.0",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
dev = [

]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# AdMob Publisher ID: pub-3141396335378101

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
]

