[project]
name = "fletbot"
version = "0.1.0"
description = "A consumer-ready implementation of OpenClaw, utilizing Flet for lightweight execution on edge hardware."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [
    {name = "Nwokike"}
]
keywords = ["ai", "assistant", "chatbot", "flet", "gemma"]

dependencies = [
    "beautifulsoup4>=4.14.3",
    "ddgs>=9.14.1",
    "flet>=0.84.0",
    "flet-ads>=0.84.0",
    "flet-audio-recorder>=0.84.0",
    "flet-camera>=0.84.0",
    "flet-permission-handler>=0.84.0",
    "flet-secure-storage>=0.84.0",
    "httpx>=0.28.1",
    "markdownify>=1.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

# ── Flet Build Configuration ────────────────────────────────────────
[tool.flet]
permissions = ["camera", "microphone"]

[tool.flet.android.meta_data]
# TODO: For Production, replace this Test Application ID with your real Google AdMob App ID
"com.google.android.gms.ads.APPLICATION_ID" = "ca-app-pub-3940256099942544~3347511713"

[tool.flet.android.permission]
"android.permission.CAMERA" = true
"android.permission.RECORD_AUDIO" = true
"android.permission.WRITE_EXTERNAL_STORAGE" = true

# ── OAuth Intent Filter (Crucial for Android Google Sign-In without a backend) ────────
[[tool.flet.android.intent_filters]]
action = "android.intent.action.VIEW"
category = ["android.intent.category.DEFAULT", "android.intent.category.BROWSABLE"]
data = { scheme = "fletbot", host = "oauth_callback" }

[tool.flet.ios.info]
NSCameraUsageDescription = "FletBot uses the camera to capture images for AI analysis"
NSMicrophoneUsageDescription = "FletBot uses the microphone for voice input"
GADApplicationIdentifier = "ca-app-pub-3940256099942544~3347511713"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
]
